@@ -1,5 +1,10 @@
 = ludy changes history
 
+== ludy 0.1.4, ?
+
+* added Page#begin and Page#end for real index in the data
+* added Paginator#count for counter.call wrapper
+
 == ludy 0.1.3, 2008.01.23
 
 * renamed next_page to next, and prev_page to prev
